@@ -4181,6 +4181,7 @@ function geodirectory_load_db_language() {
 	 * Filter the language string from database to translate via po editor
 	 *
 	 * @since 1.4.2
+	 * @since 1.6.16 Register the string for WPML translation.
 	 *
 	 * @param array $contents_strings Array of strings.
 	 */
@@ -4209,6 +4210,7 @@ function geodirectory_load_db_language() {
 		foreach ( $contents_strings as $string ) {
 			if ( is_scalar( $string ) && $string != '' ) {
 				$string = str_replace( "'", "\'", $string );
+				geodir_wpml_register_string( $string );
 				$contents .= PHP_EOL . "__('" . $string . "', 'geodirectory');";
 			}
 		}
@@ -5276,3 +5278,33 @@ function geodir_remove_hentry( $class ) {
 }
 
 add_filter( 'post_class', 'geodir_remove_hentry' );
+
+/**
+ * Registers a individual text string for WPML translation.
+ *
+ * @since 1.6.16 Details page add locations to the term links.
+ * @package GeoDirectory
+ *
+ * @param string $string The string that needs to be translated.
+ * @param string $domain The plugin domain. Default geodirectory.
+ * @param string $name The name of the string which helps to know what's being translated.
+ */
+function geodir_wpml_register_string( $string, $domain = 'geodirectory', $name = '' ) {
+    do_action( 'wpml_register_single_string', $domain, $name, $string );
+}
+
+/**
+ * Retrieves an individual WPML text string translation.
+ *
+ * @since 1.6.16 Details page add locations to the term links.
+ * @package GeoDirectory
+ *
+ * @param string $string The string that needs to be translated.
+ * @param string $domain The plugin domain. Default geodirectory.
+ * @param string $name The name of the string which helps to know what's being translated.
+ * @param string $language_code Return the translation in this language. Default is NULL which returns the current language.
+ * @return string The translated string.
+ */
+function geodir_wpml_translate_string( $string, $domain = 'geodirectory', $name = '', $language_code = NULL ) {
+    return apply_filters( 'wpml_translate_single_string', $string, $domain, $name, $language_code );
+}
