@@ -14,6 +14,7 @@ Breadcrumb formatting issue with the neighbourhood name - FIXED
 On add listing page switching WPML language changes the listing type - CHANGED
 Option added in listing map widget to enable marker cluster for map - CHANGED
 Google Analytics account error breaks the site - FIXED
+Auto register custom fields for WPML translation via GD custom field translation tool - CHANGED
 
 v1.6.15
 Google Services API can conflict with newer version of the Google Service Class - UPDATED
